# LFM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Liza  Makefile  README.md  config.txt  makefile
LIZA/Linux/: liza
libs/FSTool_lib/: FSTbase.cpp  FSTool.cpp  FSTool.h  FSexception.h  folder.h
libs/SXML_lib/: SXML.cpp  SXML.h
libs/WPTool_lib/: WPTool.cpp  WPTool.h
localization/: ENG.xml  RUS.xml  eng.txt  rus.txt
src/: liza  localization.cpp  localization.h  main.cpp  message.cpp  message.h  operations.cpp  operations.h  output.cpp  output.h  processing.cpp  processing.h  settings.cpp  settings.h
src/FSTool/: FSTbase.h  FSTool.cpp  FSTool.h  README.md  file control.cpp  file control.h  file.cpp  file.h  folder.cpp  folder.h
src/FSTool_lib/: FSTbase.cpp  FSTbase.h  FSTool.cpp  file.cpp  file.h  folder.cpp  folder.h
src/SXML_lib/: SXML.h
src/WPTool_lib/: WPTool.cpp
src/core/: operations.cpp  operations.h  output.h  settings.cpp  settings.h
